# SnapLAN

backend/: Cargo.toml
backend/src/: config.rs  errors.rs  lib.rs  main.rs  protocol.rs  state.rs
backend/src/core/: config.rs  crypto.rs  errors.rs  mod.rs
backend/src/core/identity/: capability.rs  identity.rs  mod.rs
backend/src/core/protocol/: ids.rs  mod.rs
backend/src/discovery/: advertiser.rs  browser.rs  mod.rs  types.rs
backend/src/pairing/: handshake.rs  mod.rs  qr.rs
backend/src/peer/: client.rs  connection.rs  mod.rs  server.rs
backend/src/session/: mod.rs  session.rs  state.rs
backend/src/utils/: id.rs
backend/src/ws/: broadcaster.rs  handler.rs  message.rs
frontend/: 172.20.10.2+2-key.pem  172.20.10.2+2.pem  192.168.2.12+2-key.pem  192.168.2.12+2.pem  192.168.2.2+2-key.pem  192.168.2.2+2.pem  192.168.2.5+2-key.pem  192.168.2.5+2.pem  192.168.2.7+2-key.pem  192.168.2.7+2.pem  192.168.2.9+2-key.pem  192.168.2.9+2.pem  app.js  index.html
frontend/js/: app.js
frontend/js/network/: discovery.js
frontend/js/ui/: render.js
