[package]
name = "snaplan_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.52.3", features = ["full"] }
uuid = { version = "1.23.4", features = ["v4"] }
hostname = "0.4.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
axum = { version = "0.8.9", features = ["ws"] }
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
tokio-tungstenite = "0.29.0"
thiserror = "2.0.18"
futures = "0.3.32"
tower-http = { version = "0.7.0", features = ["cors"] }